# snake-pathfinding

./: CMakeLists.txt  LICENSE  README.md
emscripten/: CMakeLists.txt
src/: App.cpp  App.h  main.cpp
src/Audio/: AudioData.cpp  AudioData.h  AudioEngine.cpp  AudioEngine.h  SynthAudioEngine.cpp  SynthAudioEngine.h
src/Core/: GameConfig.h  GameManager.cpp  GameManager.h  Renderer.cpp  Renderer.h
src/Elements/: ElementBase.cpp  ElementBase.h  Snake.cpp  Snake.h  Target.cpp  Target.h
src/Graphics/: Camera.cpp  Camera.h  CubeRenderer.cpp  CubeRenderer.h  GraphicsUtils.cpp  GraphicsUtils.h  RenderData.h  Theme.h  Themes.h
src/Graphics/Color/: Theme.h  Themes.h
src/Graphics/Shaders/: basic.frag  basic.vert
src/Map/: Cell.cpp  Cell.h  GameMap.cpp  GameMap.h  Grid.cpp  Grid.h  MapGenerator.cpp  MapGenerator.h
src/Pathfinding/Algorithms/: AStarPathfinder.cpp  AStarPathfinder.h  IPathfinder.cpp  IPathfinder.h  SafeSnakePathfinder.cpp  SafeSnakePathfinder.h
src/Pathfinding/Base/: IGraph.cpp  IGraph.h  Node.cpp  Node.h  Path.cpp  Path.h
src/Utils/: Directions.cpp  Directions.h  Types.cpp  Types.h  Vector2.h
